k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devsu-python-deployment
  namespace: devsu-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devsu-python
  template:
    metadata:
      labels:
        app: devsu-python
    spec:
      containers:
        - name: devsu-python-container
          image: arango155/devsu-python-app:latest
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /api/users/
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /api/users/
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
