k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devsu-python-service
  namespace: devsu-app
spec:
  type: ClusterIP
  selector:
    app: devsu-python
  ports:
    - port: 8000
      targetPort: 8000
