k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devsu-python-ingress
  namespace: devsu-app
spec:
  ingressClassName: nginx
  rules:
    - host: devsu.local
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: devsu-python-service
                port:
                  number: 8000

          - path: /static/
            pathType: Prefix
            backend:
              service:
                name: devsu-python-service
                port:
                  number: 8000
